test/tests/stages/16_characters_and_strings/valid/char_constants/return_char_constant.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[10]:
  int
  identifier(main)
  (
  void
  )
  {
  return
  const char('c')
  ;
  }
