test/tests/stages/16_characters_and_strings/invalid_parse/invalid_type_specifier_2.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[17]:
  int
  identifier(main)
  (
  void
  )
  {
  char
  static
  long
  identifier(x)
  =
  const int(0)
  ;
  return
  const int(0)
  ;
  }
